--- a/bidding/res/layout/activity_main.xml
+++ b/bidding/res/layout/activity_main.xml
@@ -458,6 +458,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
                         android:adjustViewBounds="true"
                         android:scaleType="fitXY"
                         android:src="@mipmap/quote" />
@@ -465,6 +466,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp"
                         android:text="报价单"
                         android:textColor="@color/QUOTE_TXT_COLOR"
                         android:textSize="@dimen/main_text_size" />
@@ -701,8 +703,10 @@
                 android:paddingBottom="24dp"
                 android:paddingTop="24dp" />
 
+
         </LinearLayout>
 
     </ScrollView>
+
 
 </LinearLayout>
