--- a/bidding/res/layout/activity_main.xml
+++ b/bidding/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
             android:layout_marginRight="8dp"
             android:layout_toLeftOf="@+id/searcher_other"
             android:layout_toRightOf="@+id/searcher_date"
-            android:background="@drawable/bg_rectangle_black"
+            android:background="@drawable/bg_rectangle_search"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -162,6 +162,7 @@
                     android:weightSum="3">
 
                     <LinearLayout
+                        android:id="@+id/biddinglist_all"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
@@ -445,6 +446,7 @@
                 android:weightSum="3">
 
                 <LinearLayout
+                    android:id="@+id/quotelist_all"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
