--- a/bidding/res/layout/item_bidding.xml
+++ b/bidding/res/layout/item_bidding.xml
@@ -84,6 +84,7 @@
         android:paddingTop="@dimen/interval_C">
 
         <ImageView
+            android:id="@+id/pictures"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:adjustViewBounds="true"
