--- a/bidding/res/layout/common_quote.xml
+++ b/bidding/res/layout/common_quote.xml
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/interval_B"
-            android:text="@string/bidding_add_topic"
+            android:text="@string/bidding_topic"
             android:textColor="@color/BASE_TEXT_COLOR"
             android:textSize="@dimen/txtsize_bidding_add" />
 
@@ -381,7 +381,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/interval_B"
-            android:text="@string/bidding_add_tax"
+            android:text="@string/bidding_tax"
             android:textColor="@color/BASE_TEXT_COLOR"
             android:textSize="@dimen/txtsize_bidding_add" />
 
@@ -414,7 +414,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/interval_B"
-            android:text="@string/bidding_add_expdate"
+            android:text="@string/bidding_expdate"
             android:textColor="@color/BASE_TEXT_COLOR"
             android:textSize="@dimen/txtsize_bidding_add" />
 
@@ -447,7 +447,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/interval_B"
-            android:text="@string/bidding_add_delivery"
+            android:text="@string/bidding_delivery"
             android:textColor="@color/BASE_TEXT_COLOR"
             android:textSize="@dimen/txtsize_bidding_add" />
 
@@ -480,7 +480,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/interval_B"
-            android:text="@string/bidding_add_payment"
+            android:text="@string/bidding_payment"
             android:textColor="@color/BASE_TEXT_COLOR"
             android:textSize="@dimen/txtsize_bidding_add" />
 
@@ -513,7 +513,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/interval_B"
-            android:text="@string/bidding_add_certificate"
+            android:text="@string/bidding_certificate"
             android:textColor="@color/BASE_TEXT_COLOR"
             android:textSize="@dimen/txtsize_bidding_add" />
 
@@ -558,7 +558,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/interval_B"
-            android:text="@string/bidding_add_other"
+            android:text="@string/bidding_other"
             android:textColor="@color/BASE_TEXT_COLOR"
             android:textSize="@dimen/txtsize_bidding_add" />
 
@@ -598,7 +598,7 @@
                 android:id="@+id/rule_txt1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/bidding_add_rule1"
+                android:text="@string/bidding_rule1"
                 android:textColor="@color/BASE_TEXT_COLOR"
                 android:textSize="@dimen/F4" />
 
@@ -606,7 +606,7 @@
                 android:id="@+id/rule_txt2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/bidding_add_rule2"
+                android:text="@string/bidding_rule2"
                 android:textColor="@color/MALL_C1"
                 android:textSize="@dimen/F4" />
 
