--- a/bidding/res/layout/activity_main.xml
+++ b/bidding/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="@dimen/title_padding_top"
                 android:adjustViewBounds="true"
-                android:background="@mipmap/search_b"
+                android:background="@drawable/search_x1"
                 android:clickable="true"
                 android:scaleType="fitXY" />
 
