--- a/bidding/res/layout/common_quote.xml
+++ b/bidding/res/layout/common_quote.xml
@@ -335,7 +335,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/product_pic_upload"
+                    android:id="@+id/product_pic_add"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/interval_D"
