--- a/bidding/res/layout/common_bidding.xml
+++ b/bidding/res/layout/common_bidding.xml
@@ -127,6 +127,8 @@
                     android:layout_centerVertical="true"
                     android:adjustViewBounds="true"
                     android:clickable="true"
+                    android:paddingLeft="@dimen/interval_A"
+                    android:paddingRight="@dimen/interval_A"
                     android:scaleType="fitXY"
                     android:src="@drawable/search_x" />
 
