--- a/bidding/res/layout/dialog_receive.xml
+++ b/bidding/res/layout/dialog_receive.xml
@@ -20,6 +20,7 @@
     <include layout="@layout/line" />
 
     <LinearLayout
+        android:id="@+id/dialog_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/interval_C"
@@ -29,7 +30,7 @@
         android:paddingTop="@dimen/interval_D">
 
         <Button
-            android:id="@+id/fapiao_zengzhi"
+            android:id="@+id/receive_peisong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -46,7 +47,7 @@
             android:textSize="@dimen/dialog_text_size" />
 
         <Button
-            android:id="@+id/fapiao_putong"
+            android:id="@+id/receive_ziti"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
