--- a/bidding/res/layout/common_bidding.xml
+++ b/bidding/res/layout/common_bidding.xml
@@ -332,28 +332,33 @@
 
             <include layout="@layout/line" />
 
-            <LinearLayout
-                android:id="@+id/product_pic"
+            <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="left|center_vertical"
-                android:orientation="horizontal"
                 android:scrollbars="none">
 
-                <ImageView
-                    android:id="@+id/product_pic_add"
-                    android:layout_width="@dimen/product_pic_add_width"
-                    android:layout_height="@dimen/product_pic_add_height"
-                    android:layout_marginBottom="@dimen/interval_D"
-                    android:layout_marginRight="@dimen/interval_B"
-                    android:layout_marginTop="@dimen/interval_D"
-                    android:adjustViewBounds="true"
-                    android:clickable="true"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/add" />
+                <LinearLayout
+                    android:id="@+id/product_pic"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left|center_vertical">
+
+                    <ImageView
+                        android:id="@+id/product_pic_add"
+                        android:layout_width="@dimen/product_pic_add_width"
+                        android:layout_height="@dimen/product_pic_add_height"
+                        android:layout_marginBottom="@dimen/interval_D"
+                        android:layout_marginRight="@dimen/interval_B"
+                        android:layout_marginTop="@dimen/interval_D"
+                        android:adjustViewBounds="true"
+                        android:clickable="true"
+                        android:scaleType="fitXY"
+                        android:src="@mipmap/add" />
 
 
-            </LinearLayout>
+                </LinearLayout>
+
+            </HorizontalScrollView>
 
             <include layout="@layout/line" />
 
