--- a/bidding/res/layout/common_bidding.xml
+++ b/bidding/res/layout/common_bidding.xml
@@ -113,6 +113,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="@dimen/interval_B"
                         android:background="@null"
+                        android:tag=""
                         android:gravity="center_vertical"
                         android:singleLine="false"
                         android:textSize="@dimen/txtsize_bidding_add" />
@@ -394,6 +395,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/interval_B"
             android:text="@string/bidding_tax"
+            android:tag=""
             android:textColor="@color/BASE_TEXT_COLOR"
             android:textSize="@dimen/txtsize_bidding_add" />
 
@@ -493,6 +495,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/interval_B"
+            android:tag=""
             android:text="@string/bidding_payment"
             android:textColor="@color/BASE_TEXT_COLOR"
             android:textSize="@dimen/txtsize_bidding_add" />
