--- a/bidding/res/layout/item_quote.xml
+++ b/bidding/res/layout/item_quote.xml
@@ -3,8 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:layout_marginTop="@dimen/interval_C"
-    android:background="@null"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -158,7 +156,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/MALL_C8"
+        android:background="@drawable/bg_rectangle_white"
         android:gravity="left|center_vertical"
         android:orientation="horizontal"
         android:paddingBottom="@dimen/interval_C"
@@ -166,11 +164,40 @@
         android:paddingRight="@dimen/interval_A"
         android:paddingTop="@dimen/interval_C">
 
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitXY" />
+        <FrameLayout
+            android:id="@+id/frame_picture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true">
+
+            <ImageView
+                android:id="@+id/pictures"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY" />
+
+            <LinearLayout
+                android:id="@+id/bg_pictures"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@mipmap/pic_num"
+                android:gravity="bottom|right"
+                android:orientation="vertical"
+                android:paddingBottom="4dp"
+                android:paddingRight="4dp"
+                android:visibility="gone">
+
+                <TextView
+                    android:id="@+id/num_pictures"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textColor="@color/MALL_C8"
+                    android:textSize="@dimen/F5" />
+
+            </LinearLayout>
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
