--- a/bidding/res/layout/item_quote.xml
+++ b/bidding/res/layout/item_quote.xml
@@ -13,7 +13,7 @@
         android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
-        android:paddingTop="@dimen/interval_D">
+        android:paddingTop="@dimen/interval_C">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -265,11 +265,11 @@
         android:layout_height="wrap_content"
         android:background="@color/MALL_C8"
         android:gravity="left|center_vertical"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:paddingBottom="@dimen/interval_C"
         android:paddingLeft="@dimen/interval_A"
         android:paddingRight="@dimen/interval_A"
-        android:paddingTop="@dimen/interval_C">
+        android:visibility="gone">
 
         <ListView
             android:id="@+id/pricelist"
@@ -279,6 +279,38 @@
             android:cacheColorHint="@null"
             android:divider="@null"
             android:scrollbars="none" />
+
+        <LinearLayout
+            android:id="@+id/foul_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="@dimen/interval_C"
+            android:visibility="gone">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left|center_vertical"
+                android:singleLine="true"
+                android:text="退回说明："
+                android:textColor="@color/MALL_C1"
+                android:textSize="@dimen/F3"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/foul_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left|center_vertical"
+                android:singleLine="false"
+                android:text=""
+                android:textColor="@color/MALL_C1"
+                android:textSize="@dimen/F3"
+                android:textStyle="normal" />
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -292,16 +324,18 @@
         android:paddingBottom="@dimen/interval_C"
         android:paddingLeft="@dimen/interval_A"
         android:paddingRight="@dimen/interval_A"
-        android:paddingTop="@dimen/interval_C">
+        android:visibility="gone">
 
-        <Button
+
+        <TextView
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/button_gray"
+            android:clickable="true"
             android:paddingBottom="8dp"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:paddingTop="8dp"
             android:text="发布报价"
             android:textColor="@color/BASE_TEXT_COLOR"
