--- a/bidding/res/layout/activity_main.xml
+++ b/bidding/res/layout/activity_main.xml
@@ -56,6 +56,7 @@
             android:layout_toLeftOf="@+id/searcher_other"
             android:layout_toRightOf="@+id/searcher_date"
             android:background="@drawable/bg_rectangle_search"
+            android:focusable="true"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -79,6 +80,7 @@
                 android:layout_height="match_parent"
                 android:background="@null"
                 android:hint="订单搜索"
+                android:imeOptions="actionSearch"
                 android:inputType="text"
                 android:singleLine="true"
                 android:textColor="@color/MALL_C8"
