--- a/bidding/res/layout/activity_main.xml
+++ b/bidding/res/layout/activity_main.xml
@@ -56,10 +56,14 @@
             android:layout_toLeftOf="@+id/searcher_other"
             android:layout_toRightOf="@+id/searcher_date"
             android:background="@drawable/bg_rectangle_search"
-            android:focusable="true"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true" />
 
             <ImageView
                 android:id="@+id/searcher_icon"
