--- a/bidding/res/layout/fragment_guide.xml
+++ b/bidding/res/layout/fragment_guide.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/splash_guide_bg"
+    android:backgroundTintMode="screen"
     android:orientation="vertical">
 
     <FrameLayout
@@ -110,7 +111,7 @@
 
         <LinearLayout
             android:id="@+id/title4"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:alpha="0"
             android:background="@mipmap/guide_no4_title_bg"
